--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -36,11 +36,11 @@ test2:
     - echo "Do another parallel test here"
     - echo "For example run a lint test"
 
-deploy1:
-  stage: deploy
-  tags:
-    - gitlabrunner2
-  script:
-    - echo "in deploy stage .... java"
-    - pwd
-    - ls -ltr
+# deploy1:
+#   stage: deploy
+#   tags:
+#     - gitlabrunner2
+#   script:
+#     - echo "in deploy stage .... java"
+#     - pwd
+#     - ls -ltr
