--- a/pom.xml
+++ b/pom.xml
@@ -6,6 +6,7 @@
   <groupId>org.springframework.samples</groupId>
   <artifactId>spring-petclinic</artifactId>
   <version>2.1.0</version>
+  <packaging>war</packaging>
 
   <parent>
     <groupId>org.springframework.boot</groupId>
@@ -133,6 +134,19 @@
           </execution>
         </executions>
       </plugin>
+      <plugin>
+            <artifactId>maven-war-plugin</artifactId>
+            <configuration>
+                <attachClasses>true</attachClasses>
+                <webXml>target/web.xml</webXml>
+                <webResources>
+                    <resource>
+                        <directory>src/main/webapp</directory>
+                        <filtering>true</filtering>
+                    </resource>
+                </webResources>
+            </configuration>
+        </plugin>
       <plugin>
         <groupId>org.jacoco</groupId>
         <artifactId>jacoco-maven-plugin</artifactId>
