--- a/pom.xml
+++ b/pom.xml
@@ -135,6 +135,11 @@
         </executions>
       </plugin>
       <plugin>
+            <inherited>true</inherited>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-compiler-plugin</artifactId>              
+        </plugin>
+      <plugin>
             <artifactId>maven-war-plugin</artifactId>
             <configuration>
                 <attachClasses>true</attachClasses>
