--- a/pom.xml
+++ b/pom.xml
@@ -135,9 +135,13 @@
         </executions>
       </plugin>
       <plugin>
-            <inherited>true</inherited>
             <groupId>org.apache.maven.plugins</groupId>
-            <artifactId>maven-compiler-plugin</artifactId>              
+            <artifactId>maven-compiler-plugin</artifactId>
+            <version>3.0</version>
+            <configuration>
+                <source>11.0</source>
+                <target>11.0</target>
+            </configuration>
         </plugin>
       <plugin>
             <artifactId>maven-war-plugin</artifactId>
