--- a/pom.xml
+++ b/pom.xml
@@ -18,7 +18,7 @@
   <properties>
 
     <!-- Generic properties -->
-    <java.version>11.0</java.version>
+    <java.version>1.8</java.version>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 
@@ -138,6 +138,10 @@
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-compiler-plugin</artifactId>
             <version>3.0</version>
+            <configuration>
+                <source>1.8</source>
+                <target>1.8</target>
+            </configuration>
         </plugin>
       <plugin>
             <artifactId>maven-war-plugin</artifactId>
