--- a/pom.xml
+++ b/pom.xml
@@ -134,20 +134,28 @@
           </execution>
         </executions>
       </plugin>
-      <plugin>
-            <artifactId>maven-war-plugin</artifactId>
+    <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-war-plugin</artifactId>
+        <version>3.3.1</version>
+        <configuration>
+          <webResources>
+            <resource>
+              <!-- this is relative to the pom.xml directory -->
+              <directory>resource2</directory>
+            </resource>
+          </webResources>
+        </configuration>
+      </plugin>
+        <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-compiler-plugin</artifactId>
+            <version>3.0</version>
             <configuration>
-                <attachClasses>true</attachClasses>
-                <webXml>target/web.xml</webXml>
-                <webResources>
-                    <resource>
-                        <directory>src/main/webapp</directory>
-                        <filtering>true</filtering>
-                    </resource>
-                </webResources>
+                <source>1.8</source>
+                <target>1.8</target>
             </configuration>
         </plugin>
-        
       <plugin>
         <groupId>org.jacoco</groupId>
         <artifactId>jacoco-maven-plugin</artifactId>
