--- a/pom.xml
+++ b/pom.xml
@@ -142,7 +142,7 @@
           <webResources>
             <resource>
               <!-- this is relative to the pom.xml directory -->
-              <directory>resource2</directory>
+              <directory>target</directory>
             </resource>
           </webResources>
         </configuration>
