--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -23,3 +23,10 @@ logging.level.org.springframework=INFO
 
 # Maximum time static resources should be cached
 spring.resources.cache.cachecontrol.max-age=12h
+
+spring.profiles.active=production
+
+server.port=8081
+
+#Adding the context path from properties file (Test purpose only)
+server.servlet.context-path=/petclinic
