--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,6 +2,7 @@
 database=hsqldb
 spring.datasource.schema=classpath*:db/${database}/schema.sql
 spring.datasource.data=classpath*:db/${database}/data.sql
+spring.h2.console.enabled=true
 
 # Web
 spring.thymeleaf.mode=HTML
@@ -18,6 +19,7 @@ management.endpoints.web.exposure.include=*
 
 # Logging
 logging.level.org.springframework=INFO
+logging.file=/var/log/petclinic/application.log
 # logging.level.org.springframework.web=DEBUG
 # logging.level.org.springframework.context.annotation=TRACE
 
